/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;

package com.android.server.companion.proto;

/* Represents a message between companion devices */
message CompanionMessage {
  int32 id = 1;

  PaginationInfo paginationInfo = 2;

  Type type = 3;

  // message body data
  bytes data = 4;

  /* Message pagination info */
  message PaginationInfo {
    // id of the parent message, which should be the same for all the paginated messages
    int32 parentId = 1;

    // page number of the current message in [1, total]
    int32 page = 2;

    // total number of messages
    int32 total = 3;
  }

  /* Message type */
  enum Type {
    // default value for proto3
    UNKNOWN = 0;

    // handshake message to establish secure channel
    SECURE_CHANNEL_HANDSHAKE = 1;

    // permission sync
    PERMISSION_SYNC = 2;
  }
}
